--- a/1.3 Data Visualization Lab.ipynb
+++ b/1.3 Data Visualization Lab.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 134,
    "id": "841e7228-8179-4d0e-b2fc-98a9d68b7e22",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 135,
    "id": "6686f8db-f57b-4c28-912e-367e175fb409",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "<Axes: title={'center': 'Distribution of Beats Per Minute in Songs on Spotify'}, xlabel='Beats per Minute', ylabel='Frequency'>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 136,
    "id": "bdca14b2-ed4c-4cce-b8a3-f442c91d3d1a",
    "metadata": {
     "tags": []
@@ -323,7 +323,7 @@
        "Name: bpm, dtype: float64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 137,
    "id": "129abb5f-8f48-4d17-9057-59d8184e58d3",
    "metadata": {
     "tags": []
@@ -362,7 +362,7 @@
        "<Axes: title={'center': 'Distribution of Key in Songs on Spotify'}, xlabel='key'>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 138,
    "id": "68bfb66a-2098-41f2-a035-415040e55312",
    "metadata": {
     "tags": []
@@ -410,7 +410,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 139,
    "id": "a677c158-a755-4111-af1a-87c85a3d32c6",
    "metadata": {
     "tags": []
@@ -449,7 +449,7 @@
        "<Axes: title={'center': 'Distribution of Mode in Spotify Songs'}, ylabel='count'>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 140,
    "id": "73051ef9-23a4-4d25-864e-311e3d844811",
    "metadata": {
     "tags": []
@@ -488,7 +488,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 141,
    "id": "cbf73e6b-d5d9-4175-b45f-a6c4b0042b95",
    "metadata": {
     "tags": []
@@ -527,7 +527,7 @@
        "<Axes: title={'center': 'Distribution of Dancability in Songs on Spotify'}, xlabel='Percent', ylabel='Frequency'>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 142,
    "id": "deadc2a0-558f-4b3e-8a2a-1216d8e602db",
    "metadata": {
     "tags": []
@@ -573,7 +573,7 @@
        "Name: danceability_%, dtype: float64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 143,
    "id": "4b2b7928-9235-4c20-b0b4-39917023f7a4",
    "metadata": {
     "tags": []
@@ -614,7 +614,7 @@
        "<Axes: title={'center': 'Distribution of Energy in Songs on Spotify'}, xlabel='Percent', ylabel='Frequency'>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 144,
    "id": "60fe67d0-1a6b-422c-8a46-49c1ef53a22b",
    "metadata": {
     "tags": []
@@ -660,7 +660,7 @@
        "Name: energy_%, dtype: float64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "id": "fbca47ad-6bb2-4f44-ae0b-84a0353324ce",
    "metadata": {
     "tags": []
@@ -699,7 +699,7 @@
        "<Axes: title={'center': 'Distribution of Speechiness in Songs on Spotify'}, xlabel='Percent', ylabel='Frequency'>"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 146,
    "id": "94417aad-6dda-4d7d-8563-bd1a2acd0827",
    "metadata": {},
    "outputs": [
@@ -743,7 +743,7 @@
        "Name: speechiness_%, dtype: float64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 147,
    "id": "30f6334d-686b-464e-b08b-ab3092ba6467",
    "metadata": {
     "tags": []
@@ -782,7 +782,7 @@
        "<Axes: title={'center': 'Distribution of Acousticness in Songs on Spotify'}, xlabel='Percent', ylabel='Frequency'>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 148,
    "id": "610bffb8-7560-4a5b-bf98-ccb90bbaf779",
    "metadata": {
     "tags": []
@@ -828,7 +828,7 @@
        "Name: acousticness_%, dtype: float64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 149,
    "id": "8711e8e8-0881-4d2a-88f9-94e2e653ad9c",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,12 +1014,12 @@
     "tags": []
    },
    "source": [
-    "A song that I recognize as being a big hit is Cruel Summer by Taylor Swift.  (Note: I accept whatever song they choose as being a big hit)."
+    "A song that I recognize as being a big hit is Cruel Summer by Taylor Swift.  (Note: I accept whatever song students choose as being a big hit)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 150,
    "id": "b9dd320e-f223-4644-b6db-009715203290",
    "metadata": {
     "tags": []
@@ -1082,7 +1082,7 @@
        "3              11             15  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
